--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,11 +12,14 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
+      - run: |
+            npm config set //npm.pkg.github.com/happer64bit/:_authToken=\${NODE_AUTH_TOKEN}
+            npm config set registry https://npm.pkg.github.com/happer64bit/
+            npm config set always-auth false
       - run: npm ci
       - run: npm publish
         env:
