--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ jobs:
           with:
             node-version: "20"
         - run: npm ci
-        - run: npm test
+        - run: npm build
         - uses: JS-DevTools/npm-publish@v3
           id: publish
           with:
