--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,23 +1,21 @@
-name: Publish package to GitHub Packages
+name: Publish Package to npmjs
 
 on:
-    push:
-        branches: main
-  
+  release:
+    types: [published]
 jobs:
-    publish:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v3
-          with:
-            node-version: "20"
-        - run: npm ci
-        - run: npm run build
-        - uses: JS-DevTools/npm-publish@v3
-          id: publish
-          with:
-            token: ${{ secrets.NODE_TOKEN }}
-        - if: ${{ steps.publish.outputs.type }}
-          run: echo "Version changed!"
-        
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
