ci: added npm config command

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          token: ${{ secrets.NODE_TOKEN }}
           registry-url: 'https://registry.npmjs.org'
       - run: npm config set registry https://registry.npmjs.org
       - run: npm config set _auth ${{ secrets.NODE_TOKEN }}
