--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,12 +16,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          token: ${{ secrets.NODE_TOKEN }}
           registry-url: 'https://registry.npmjs.org'
-      - run: npm config set registry https://registry.npmjs.org
-      - run: npm config set _auth ${{ secrets.NODE_TOKEN }}
-      - run: npm install
+      - run: npm ci
       - run: npm run build
-      - run: npm publish
+      - run: npm publish --provenance --access public
         env:
-          NPM_TOKEN: ${{ secrets.NODE_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_TOKEN }}
