ci: changed to registry url

--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "typescript": "^5.5.4"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   }
 }
