--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
