ci: changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "style-eye",
+  "name": "@happer64bit/style-eyes",
   "version": "1.0.0",
   "description": "A CLI tool for optimizing CSS files by combining properties",
   "main": "lib/index.js",
@@ -25,6 +25,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@happer64bit/style-eyes": "file:",
     "commander": "^12.1.0",
     "style-eye": "file:",
     "style-eyes": "file:"
