--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^5.5.4"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
   "release": {
     "branches": [
