ci: changed package name

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,4 +22,4 @@ jobs:
       - run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NODE_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
